<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:fontFamily="@font/poppins_bold" android:text="@string/members" android:textColor="@color/primary" android:textSize="28sp" />
    <Button android:id="@+id/btnFragmentAddMember" android:layout_width="match_parent" android:layout_height="58dp" android:layout_marginTop="24dp" android:text="@string/add_member" android:textAllCaps="false" />
    <Button android:id="@+id/btnFragmentViewMembers" android:layout_width="match_parent" android:layout_height="58dp" android:layout_marginTop="12dp" android:text="@string/view_members" android:textAllCaps="false" />
</LinearLayout>
